# sayiiwhat

./: .gitignore  CHANGELOG.html  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/skills/zzap/: SKILL.md
apps/desktop/: index.html  package.json
apps/desktop/scripts/: package-macos.sh
apps/desktop/src/: main.tsx  styles.css  tokens.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: dev_process.rs
apps/desktop/src-tauri/src/: lib.rs  main.rs
scripts/: fetch-whisper-cpp.sh
