[package]
name = "sayiiwhat"
version = "0.2.1"
description = "Local video subtitle generator with OpenAI-compatible translation."
authors = ["sayiiwhat"]
edition = "2021"

[lib]
name = "sayiiwhat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.3", features = [] }
tauri-plugin-dialog = "2.4.0"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["process", "rt-multi-thread", "macros", "io-util", "time", "sync"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

